--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.17.0",
+    "i18next": "^24.2.2",
     "lucide-react": "^0.471.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.1",
+    "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
